@@ -1,60 +1,129 @@
 package us.ihmc.quadrupedRobotics.messageHandling;
 
 import us.ihmc.commons.MathTools;
+import us.ihmc.communication.streamingData.GlobalDataProducer;
 import us.ihmc.euclid.referenceFrame.FramePoint3D;
+import us.ihmc.euclid.referenceFrame.FrameQuaternion;
 import us.ihmc.euclid.referenceFrame.ReferenceFrame;
+import us.ihmc.euclid.referenceFrame.interfaces.FrameQuaternionReadOnly;
 import us.ihmc.euclid.referenceFrame.interfaces.FrameVector3DReadOnly;
+import us.ihmc.quadrupedRobotics.communication.packets.QuadrupedTimedStepPacket;
+import us.ihmc.quadrupedRobotics.estimator.referenceFrames.QuadrupedReferenceFrames;
+import us.ihmc.quadrupedRobotics.planning.QuadrupedTimedStep;
 import us.ihmc.quadrupedRobotics.planning.YoQuadrupedTimedStep;
-import us.ihmc.quadrupedRobotics.planning.stepStream.QuadrupedStepStream;
-import us.ihmc.robotics.lists.GenericTypeBuilder;
-import us.ihmc.robotics.lists.RecyclingArrayList;
+import us.ihmc.quadrupedRobotics.util.TimeIntervalTools;
+import us.ihmc.quadrupedRobotics.util.YoPreallocatedList;
+import us.ihmc.robotics.math.frames.YoFrameOrientation;
 import us.ihmc.yoVariables.parameters.DoubleParameter;
 import us.ihmc.yoVariables.registry.YoVariableRegistry;
 import us.ihmc.yoVariables.variable.YoBoolean;
 import us.ihmc.yoVariables.variable.YoDouble;
 
 import java.util.ArrayList;
+import java.util.concurrent.atomic.AtomicReference;
 
 public class QuadrupedStepMessageHandler
 {
    private static final ReferenceFrame worldFrame = ReferenceFrame.getWorldFrame();
-
-   private static final int STEP_QUEUE_SIZE = 10;
+   private static final int STEP_QUEUE_SIZE = 40;
 
    private final YoVariableRegistry registry = new YoVariableRegistry(getClass().getSimpleName());
 
-   private final RecyclingArrayList<YoQuadrupedTimedStep> stepSequence;
-
+   private final AtomicReference<QuadrupedTimedStepPacket> inputTimedStepPacket = new AtomicReference<>();
+   private final QuadrupedReferenceFrames referenceFrames;
+   private final YoFrameOrientation bodyOrientation;
    private final ArrayList<YoQuadrupedTimedStep> activeSteps = new ArrayList<>();
-
-   private final QuadrupedStepStream stepStream;
    private final YoDouble robotTimestamp;
-
-   private final DoubleParameter haltTransitionDurationParameter = new DoubleParameter("haltTransitionDuration", registry, 1.0);
-
-   private final FramePoint3D tempPoint = new FramePoint3D();
+   private final DoubleParameter haltTransitionDurationParameter = new DoubleParameter("haltTransitionDuration", registry, 0.0);
+   private final YoPreallocatedList<YoQuadrupedTimedStep> receivedStepSequence;
+   private final YoPreallocatedList<YoQuadrupedTimedStep> adjustedStepSequence;
 
    private final YoDouble haltTime = new YoDouble("haltTime", registry);
    private final YoBoolean haltFlag = new YoBoolean("haltFlag", registry);
 
-   public QuadrupedStepMessageHandler(QuadrupedStepStream stepStream, YoDouble robotTimestamp, YoVariableRegistry parentRegistry)
-   {
-      this.stepStream = stepStream;
-      this.robotTimestamp = robotTimestamp;
+   private final FramePoint3D tempPoint = new FramePoint3D();
 
-      stepSequence = new RecyclingArrayList<>(STEP_QUEUE_SIZE, new GenericTypeBuilder<YoQuadrupedTimedStep>()
+   public QuadrupedStepMessageHandler(YoDouble robotTimestamp, QuadrupedReferenceFrames referenceFrames, GlobalDataProducer globalDataProducer, YoVariableRegistry parentRegistry)
+   {
+      this.robotTimestamp = robotTimestamp;
+      this.receivedStepSequence = new YoPreallocatedList<>("receivedStepSequence", registry, STEP_QUEUE_SIZE, YoQuadrupedTimedStep::new);
+      this.adjustedStepSequence = new YoPreallocatedList<>("adjustedStepSequence", registry, STEP_QUEUE_SIZE, YoQuadrupedTimedStep::new);
+      this.referenceFrames = referenceFrames;
+      this.bodyOrientation = new YoFrameOrientation("bodyOrientation", ReferenceFrame.getWorldFrame(), registry);
+
+      if(globalDataProducer != null)
       {
-         private int stepNumber = 0;
-         @Override
-         public YoQuadrupedTimedStep newInstance()
-         {
-            YoQuadrupedTimedStep step = new YoQuadrupedTimedStep("stepSequence" + stepNumber, registry);
-            stepNumber++;
-            return step;
-         }
-      });
+         globalDataProducer.attachListener(QuadrupedTimedStepPacket.class, inputTimedStepPacket::set);
+      }
 
       parentRegistry.addChild(registry);
+   }
+
+   public boolean isStepPlanAvailable()
+   {
+      return inputTimedStepPacket.get() != null;
+   }
+
+   public void getBodyOrientation(FrameQuaternion bodyOrientation)
+   {
+      bodyOrientation.setIncludingFrame(this.bodyOrientation.getFrameOrientation());
+   }
+
+   public FrameQuaternionReadOnly getBodyOrientation()
+   {
+      return bodyOrientation.getFrameOrientation();
+   }
+
+   /**
+    * Consumes incoming footsteps and adjusts their position by the given vector
+    */
+   public void process(FrameVector3DReadOnly stepAdjustment)
+   {
+      if(isStepPlanAvailable())
+      {
+         updateStepSequence();
+      }
+
+      if(haltFlag.getBooleanValue())
+         pruneHaltedSteps();
+
+      updateAdjustedStepQueue(stepAdjustment);
+      updateActiveSteps();
+   }
+
+   private void updateStepSequence()
+   {
+      double currentTime = robotTimestamp.getDoubleValue();
+      QuadrupedTimedStepPacket stepPacket = this.inputTimedStepPacket.getAndSet(null);
+
+      boolean isExpressedInAbsoluteTime = stepPacket.isExpressedInAbsoluteTime;
+      ArrayList<QuadrupedTimedStep> steps = stepPacket.getSteps();
+
+      receivedStepSequence.clear();
+      for (int i = 0; i < Math.min(steps.size(), STEP_QUEUE_SIZE) ; i++)
+      {
+         double timeShift = isExpressedInAbsoluteTime ? 0.0 : currentTime;
+         double touchdownTime = steps.get(i).getTimeInterval().getEndTime();
+         if (touchdownTime + timeShift >= currentTime)
+         {
+            receivedStepSequence.add();
+            YoQuadrupedTimedStep step = receivedStepSequence.get(receivedStepSequence.size() - 1);
+            step.set(steps.get(i));
+            step.getTimeInterval().shiftInterval(timeShift);
+         }
+      }
+
+      TimeIntervalTools.sortByEndTime(receivedStepSequence);
+      bodyOrientation.setFromReferenceFrame(referenceFrames.getCenterOfFeetZUpFrameAveragingLowestZHeightsAcrossEnds());
+   }
+
+   private void pruneHaltedSteps()
+   {
+      for (int i = receivedStepSequence.size() - 1; i >=0; i--)
+      {
+         if(receivedStepSequence.get(i).getTimeInterval().getStartTime() > haltTime.getDoubleValue())
+            receivedStepSequence.remove(i);
+      }
    }
 
    public void initialize()
@@ -62,51 +131,40 @@ public class QuadrupedStepMessageHandler
       haltFlag.set(false);
    }
 
-   public void consumeIncomingSteps()
+   private void updateAdjustedStepQueue(FrameVector3DReadOnly stepAdjustment)
    {
-      // update step plan
-      stepSequence.clear();
-      for (int i = 0; i < stepStream.getSteps().size(); i++)
+      adjustedStepSequence.clear();
+      for (int i = 0; i < receivedStepSequence.size(); i++)
       {
-         if (!haltFlag.getBooleanValue() || stepStream.getSteps().get(i).getTimeInterval().getEndTime() < haltTime.getDoubleValue())
-         {
-            YoQuadrupedTimedStep step = stepSequence.add();
-            step.set(stepStream.getSteps().get(i));
-         }
-      }
+         adjustedStepSequence.add();
+         YoQuadrupedTimedStep receivedStep = receivedStepSequence.get(i);
+         YoQuadrupedTimedStep adjustedStep = adjustedStepSequence.get(i);
+         adjustedStep.set(receivedStep);
 
-      updateActiveSteps();
-   }
-
-   public void adjustStepQueue(FrameVector3DReadOnly stepAdjustment)
-   {
-      for (int i = 0; i < stepSequence.size(); i++)
-      {
-         YoQuadrupedTimedStep step = stepSequence.get(i);
-         step.getGoalPosition(tempPoint);
+         adjustedStep.getGoalPosition(tempPoint);
          tempPoint.changeFrame(worldFrame);
          tempPoint.add(stepAdjustment);
-         step.setGoalPosition(tempPoint);
+         adjustedStep.setGoalPosition(tempPoint);
       }
    }
 
    public boolean isDoneWithStepSequence()
    {
-      return stepSequence.size() == 0 || stepSequence.getLast().getTimeInterval().getEndTime() < robotTimestamp.getDoubleValue();
+      return receivedStepSequence.size() == 0 || receivedStepSequence.get(receivedStepSequence.size() - 1).getTimeInterval().getEndTime() < robotTimestamp.getDoubleValue();
    }
 
    public void halt()
    {
-      if (haltFlag.getBooleanValue() == false)
+      if (!haltFlag.getBooleanValue())
       {
          haltFlag.set(true);
          haltTime.set(robotTimestamp.getDoubleValue() + haltTransitionDurationParameter.getValue());
       }
    }
 
-   public RecyclingArrayList<YoQuadrupedTimedStep> getStepSequence()
+   public YoPreallocatedList<YoQuadrupedTimedStep> getStepSequence()
    {
-      return stepSequence;
+      return adjustedStepSequence;
    }
 
    public ArrayList<YoQuadrupedTimedStep> getActiveSteps()
@@ -118,17 +176,24 @@ public class QuadrupedStepMessageHandler
    {
       activeSteps.clear();
 
-      for (int i = 0; i < stepSequence.size(); i++)
+      for (int i = 0; i < adjustedStepSequence.size(); i++)
       {
          double currentTime = robotTimestamp.getDoubleValue();
-         double startTime = stepSequence.get(i).getTimeInterval().getStartTime();
-         double endTime = stepSequence.get(i).getTimeInterval().getEndTime();
+         double startTime = adjustedStepSequence.get(i).getTimeInterval().getStartTime();
+         double endTime = adjustedStepSequence.get(i).getTimeInterval().getEndTime();
 
          if (MathTools.intervalContains(currentTime, startTime, endTime))
          {
-            activeSteps.add(stepSequence.get(i));
+            activeSteps.add(adjustedStepSequence.get(i));
          }
       }
    }
 
+   public void reset()
+   {
+      haltFlag.set(false);
+      inputTimedStepPacket.set(null);
+      receivedStepSequence.clear();
+      adjustedStepSequence.clear();
+   }
 }
